@@ -1,0 +1,55 @@
+<printer id="printer/Oki-B410">
+  <make>Oki</make>
+  <model>B410</model>
+  <mechanism>
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <pcl level="6" />
+    <pjl />
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MANUFACTURER:OKI DATA CORP;COMMAND SET:PJL,PCL,IBMPPR,EPSONFX,PCLXL;MODEL:B410;CLASS:PRINTER;DESCRIPTION:OKI B410;</ieee1284>
+      <commandset>PJL,PCL,IBMPPR,EPSONFX,PCLXL</commandset>
+      <description>OKI B410</description>
+      <manufacturer>OKI DATA CORP</manufacturer>
+      <model>B410</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>pxlmono</driver>
+  <drivers>
+    <driver>
+      <id>hpijs-pcl5e</id>
+    </driver>
+    <driver>
+      <id>lj4dith</id>
+    </driver>
+    <driver>
+      <id>ljet4</id>
+    </driver>
+    <driver>
+      <id>ljet4d</id>
+    </driver>
+    <driver>
+      <id>pxlmono</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+
+      Monochrome laser printer which uses the standard PCL 5e and PCL
+      6/XL languages.
+
+    </en>
+  </comments>
+</printer>
