@@ -1,3 +1,7 @@
+2010-07-16  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Oki-B410.xml: Added Oki B410 (Ubuntu bug #603894).
+
 2010-07-16  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Lexmark-E120n.xml:
